--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>hola</title>
+    <title>Primera pagina</title>
   </head>
   <body>
     <div class="">
-      Texto 
+      Texto
     </div>
   </body>
 </html>
